--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
-/*  your css code here. If applicable */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 600px;
+}
+
+td {
+  padding: 8px 12px;
+  text-align: center;
+}
