--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 table {
   border-collapse: collapse;
-  width: 100%;
-  max-width: 600px;
+  margin-top: 10px;
+  width: auto;
 }
 
 td {
-  padding: 8px 12px;
+  padding: 8px;
   text-align: center;
+  border: 1px solid black;
 }
